# ai-test-project

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
scripts/: augmentation.py  build_vgg16.py  evaluate_model.py  load_dataset.py  test_model.py  train_vgg16.py  use_cuda.py
